--- a/package.json
+++ b/package.json
@@ -1,14 +1,29 @@
 {
-  "name": "fullstacktest",
-  "version": "1.0.0",
-  "description": "We'd like to give you a real-world exercise. Please provide us with the code solution you come up with. If you don't have a final working solution, please show whatever solution you did come up with, what roadblocks there were, etc. The journey can be as important as the destination!",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
+  "name": "test",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "handlebars": "^4.0.12"
+    "babel-eslint": "^10.0.1",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
+    "react-scripts": "2.1.3"
+  },
+  "scripts": {
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ],
+  "devDependencies": {
+    "nodemon": "^1.18.9"
   }
 }
